--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MatchMakingActivity"></activity>
+        <activity android:name=".MatchMakingActivity">
+
+        </activity>
     </application>
 
 </manifest>
